--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <main>
         <section id="login">
-            <div id="imagen">
-                Foto
+            <div id="imagem">
+                
             </div>
             <div id="formulario">
                 <h1>Login</h1>
-                <p>Seja bem-vindo(a) novamente. Faça o login para acessar sua conta e poder entrar em contato e fazer um orçamento</p>
+                <p>Seja bem-vindo(a) novamente. Faça o login para acessar sua conta e poder fazer um orçamento</p>
                 <form action="login.php" method="post">
-                    
+
                 </form>
             </div>
         </section>
